--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-static-top">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" [routerLink]="['/']"><b>Meat</b></a>
+      <a class="navbar-brand" [routerLink]="['/']"><b>Beater</b></a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
@@ -12,8 +12,8 @@
     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
       <ul class="nav navbar-nav">
           <li routerLinkActive="active">
-            <a [routerLink]="['/restaurants']">
-              Restaurantes
+            <a [routerLink]="['/songs']">
+              Músicas
             </a>
           </li>
 
