--- a/src/app/restaurants/restaurant/restaurant.component.html
+++ b/src/app/restaurants/restaurant/restaurant.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/restaurants',restaurant.id]">
+<a [routerLink]="['/songs',restaurant.id]">
   <div class="place-info-box">
     <span class="place-info-box-icon"><img [src]="restaurant.imagePath" /></span>
 
