Refactoring Songs to Genres
The reason to this is to follow the teacher's architecture. When we're
selling songs, we can't have a shopping cart for it. It is the product.

Now we will have a shopping cart of genres, featuring songs on the menu

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
 
 <section class="content">
     <p class="lead">
-      Meat | Aplicação que demonstra as features do Angular
+      Beater | Trabalho de PROJETO EM DESENVOLVIMENTO TECNOLÓGICO E INOVAÇÃO I
     </p>
     <p class="lead">
       MIT license
