--- a/src/app/genres/genres.component.html
+++ b/src/app/genres/genres.component.html
@@ -4,8 +4,8 @@
 </section>
 <section class="content">
   <div class="row">
-    <div *ngFor="let song of songs" class="col-sm-6 col-xs-12">
-      <mt-song [song]="song"></mt-song>
+    <div *ngFor="let genre of genres" class="col-sm-6 col-xs-12">
+      <mt-genre [genre]="genre"></mt-genre>
     </div>
   </div>
 </section>
