--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
       <ul class="nav navbar-nav">
           <li routerLinkActive="active">
-            <a [routerLink]="['/songs']">
+            <a [routerLink]="['/genres']">
               Músicas
             </a>
           </li>
