--- a/src/app/genres/genres.component.html
+++ b/src/app/genres/genres.component.html
@@ -1,6 +1,6 @@
 <!-- Início do Conteúdo -->
 <section class="content-header">
-  <h1>Todas as músicas</h1>
+  <h1>Todos os gêneros</h1>
 </section>
 <section class="content">
   <div class="row">
