--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -4,8 +4,7 @@
     <div class="place-info-box-content">
       <span class="place-info-box-text">{{ genre.name }}</span>
       <span class="place-info-box-star"><i class="fa fa-star"></i> {{ genre.rating }}</span>
-      <span class="place-info-box-detail">{{ genre.author }}</span>
-      <span class="place-info-box-detail">{{ genre.genre }}</span>
+      <span class="place-info-box-detail">{{ genre.review }}</span>
     </div>
   </div>
 </a>
