--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
           <li routerLinkActive="active">
             <a [routerLink]="['/genres']">
-              Músicas
+              Gêneros
             </a>
           </li>
 
