--- a/src/app/restaurant-detail/menu/menu.component.html
+++ b/src/app/restaurant-detail/menu/menu.component.html
@@ -2,12 +2,12 @@
 <div class="col-md-9 col-xs-12">
 
     <div class="menu-item-info-box">
-        <span class="menu-item-info-box-icon"><img src="assets/img/foods/cupcake.png"></span>
+        <span class="menu-item-info-box-icon"><img src="assets/img/foods/doors.jpg"></span>
 
         <div class="menu-item-info-box-content">
-          <span class="menu-item-info-box-text">Cup Cake</span>
-          <span class="menu-item-info-box-detail">Cup Cake recheado de Doce de Leite</span>
-          <span class="menu-item-info-box-price">R$ 10,00</span>
+          <span class="menu-item-info-box-text">The Doors - Riders on the Storm</span>
+          <span class="menu-item-info-box-detail">Uma excelente música para se ouvir em um dia chuvoso...</span>
+          <span class="menu-item-info-box-price">R$ 1,00</span>
           <a class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
         </div>
         <!-- /.info-box-content -->
@@ -15,12 +15,12 @@
     <!-- /.info-box -->
 
     <div class="menu-item-info-box">
-        <span class="menu-item-info-box-icon"><img src="assets/img/foods/donut.png"></span>
+        <span class="menu-item-info-box-icon"><img src="assets/img/foods/doors.jpg"></span>
 
         <div class="menu-item-info-box-content">
-          <span class="menu-item-info-box-text">Donut</span>
-          <span class="menu-item-info-box-detail">Coberto com chantilly</span>
-          <span class="menu-item-info-box-price">R$ 10,00</span>
+          <span class="menu-item-info-box-text">The doors - The Changeling</span>
+          <span class="menu-item-info-box-detail">A música perfeita para começar a acreditar em dias melhores.</span>
+          <span class="menu-item-info-box-price">R$ 1,00</span>
           <a class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
         </div>
         <!-- /.info-box-content -->
@@ -28,12 +28,12 @@
     <!-- /.info-box -->
 
     <div class="menu-item-info-box">
-        <span class="menu-item-info-box-icon"><img src="assets/img/foods/croissant.png"></span>
+        <span class="menu-item-info-box-icon"><img src="assets/img/foods/doors.jpg"></span>
 
         <div class="menu-item-info-box-content">
-          <span class="menu-item-info-box-text">Croissant</span>
-          <span class="menu-item-info-box-detail">Recheado com queijo e presunto</span>
-          <span class="menu-item-info-box-price">R$ 10,00</span>
+          <span class="menu-item-info-box-text">The doors - Love Her Madly</span>
+          <span class="menu-item-info-box-detail">Com toda certeza não existe musica melhor para seus rituais secretos</span>
+          <span class="menu-item-info-box-price">R$ 666,00</span>
           <a class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
         </div>
         <!-- /.info-box-content -->
