--- a/src/app/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/restaurant-detail/restaurant-detail.component.html
@@ -20,16 +20,15 @@
                 <!-- /.box-header -->
                 <div class="box-body">
                   <div class="col-sm-3 col-xs-12">
-                    <img class="box-img-detail" src="assets/img/restaurants/breadbakery.png" />
+                    <img class="box-img-detail" src="assets/img/foods/doors.jpg" />
                   </div>
 
                   <dl class="col-sm-9 col-xs-12">
-                    <dt>Categoria</dt>
-                    <dd>Padaria</dd>
-                    <dt>Quem somos</dt>
-                    <dd>A Bread &amp; Brakery tem 40 anos de mercado. Fazemos os melhores doces e pães. Compre e confira.</dd>
-                    <dt>Horários</dt>
-                    <dd>Funciona de segunda à sexta, de 8h às 23h</dd>
+                    <dt>Gênero</dt>
+                    <dd>Rock n Roll</dd>
+                    <dt>Sobre</dt>
+                    <dd>L.A. Woman é o sexto álbum de estúdio da banda norte-americana The Doors, lançado a 19 de Abril de 1971, pela Elektra Records.</dd>
+                    
                   </dl>
                 </div>
                 <!-- /.box-body -->
@@ -43,7 +42,6 @@
               </div>
               </div>
             </div>
-            <!-- /.col-xs-12 -->
 
         </div>
 
