--- a/src/app/genre-detail/genre-detail.component.html
+++ b/src/app/genre-detail/genre-detail.component.html
@@ -9,15 +9,15 @@
         <div class="box-header with-border">
           <i class="fa fa-home"></i>
           <h3 class="box-title">
-            {{ genre.name }}
+            {{genre?.name}}
             <span class="pull-right">
-              <i class="fa fa-star"></i> {{ genre.rating }}
+              <i class="fa fa-star"></i> {{genre?.rating}}
             </span>
           </h3>
         </div>
         <div class="box-body">
-          <div class="col-sm-3 col-xs-12">
-            <img class="box-img-detail" src="{{ genre.picture }}" />
+          <div *ngIf="genre" class="col-sm-3 col-xs-12">
+            <img class="box-img-detail" [src]="genre?.picture" />
           </div>
           <dl class="col-sm-9 col-xs-12">
             <dt>Descrição</dt>
