--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -1,3 +1,11 @@
-<p>
-  menu-item works!
-</p>
+  <div *ngFor="let song of songs" class="col-sm-6 col-xs-12">
+    <div class="menu-item-info-box">
+      <span class="menu-item-info-box-icon"><img src="song.picture"></span>
+      <div class="menu-item-info-box-content">
+        <span class="menu-item-info-box-text">{{ song.name }}</span>
+        <span class="menu-item-info-box-detail">{{ song.review }}</span>
+        <span class="menu-item-info-box-price">{{ song.price }}</span>
+        <a class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
+      </div>
+    </ div>
+  </div>
