--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -7,6 +7,6 @@
     <span class="menu-item-info-box-detail">{{ menuItem.description }}</span>
     <span class="menu-item-info-box-detail">{{ menuItem.author }}</span>
     <span class="menu-item-info-box-price">{{ menuItem.price }}</span>
-    <a class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
+    <a (click) = "emitAddEvent()" class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
   </div>
 </div>
