--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,5 +4,5 @@
      [menuItem]="item" (add)="shoppingCart.addItem($event)"> </mt-menu-item>
 </div>
 <div class="col-md-3 col-xs-12">
-  <mt-shopping-cart></mt-shopping-cart>
+  <mt-shopping-cart #shoppingCart></mt-shopping-cart>
 </div>
