--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,11 +5,10 @@
 
 <section class="content">
     <p class="lead">
-<<<<<<< HEAD
       Beater | Trabalho de PROJETO EM DESENVOLVIMENTO TECNOLÓGICO E INOVAÇÃO I
-=======
-      Beater foi feito com dois objetivos : Passar na matéria do Daniel e aprender mais sobre Angular e TypeScript :D
->>>>>>> master
+
+      Beater foi desenvolvido para o puro entreterimento musical de nossos amados usuários.
+
     </p>
   </section>
 <!-- FIM DO CONTEÚDO -->
